@@ -41,8 +41,12 @@
   <def name="avgBusy1" value="1.3.6.1.4.1.9.2.1.57.0" />
   <def name="avgBusy5" value="1.3.6.1.4.1.9.2.1.58.0" />
 
+  <!-- CISCO-ENHANCED-MEMPOOL-MIB:cempMemPoolTable -->
+  <def name="cempMemPoolUsed"        value="1.3.6.1.4.1.9.9.221.1.1.1.1.7" />
+  <def name="cempMemPoolFree"        value="1.3.6.1.4.1.9.9.221.1.1.1.1.8" />
+  <def name="cempMemPoolLargestFree" value="1.3.6.1.4.1.9.9.221.1.1.1.1.9" />
+  
   <!-- CISCO-MEMORY-POOL-MIB:ciscoMemoryPoolTable -->
-  <def name="ciscoMemoryPoolName"        value="1.3.6.1.4.1.9.9.48.1.1.1.2" />
   <def name="ciscoMemoryPoolUsed"        value="1.3.6.1.4.1.9.9.48.1.1.1.5" />
   <def name="ciscoMemoryPoolFree"        value="1.3.6.1.4.1.9.9.48.1.1.1.6" />
   <def name="ciscoMemoryPoolLargestFree" value="1.3.6.1.4.1.9.9.48.1.1.1.7" />
@@ -62,7 +66,6 @@
 <datasources>
 
   <template name="cisco-memusage-subtree">
-    <param name="data-file"    value="%system-id%_memusage.rrd"/>
     <param name="vertical-label" value="Bytes"/>
     <param name="rrd-create-dstype" value="GAUGE" />
     <param name="rrd-hwpredict" value="disabled" />
@@ -82,7 +85,51 @@
            value="%system-id%:%mempool-name% Memory"/>
   </template>
 
+  <template name="cisco-enh-mempool">
+    <param name="data-file"
+             value="%system-id%_memusage_%mempool-phyindex%.rrd"/>
+    <leaf name="Usage">
+      <param name="precedence" value="1000"/>
+      <param name="comment" value="Total vs. Used Memory"/>
+      <param name="title"   value="%mempool-name% Memory Usage"/>
+      <param name="ds-type" value="rrd-multigraph"/>
+      <param name="ds-names" value="total,used"/>
+      <!-- total -->
+      <param name="ds-expr-total" value="{Free},{Used},+"/>
+      <param name="graph-legend-total" value="Total"/>
+      <param name="line-style-total" value="##totalresource"/>
+      <param name="line-color-total" value="##totalresource"/>
+      <param name="line-order-total" value="1"/>
+      <!-- used -->
+      <param name="ds-expr-used" value="{Used}"/>
+      <param name="graph-legend-used" value="Used"/>
+      <param name="line-style-used" value="##resourceusage"/>
+      <param name="line-color-used" value="##resourceusage"/>
+      <param name="line-order-used" value="2"/>
+    </leaf>
+    <leaf name="Free">
+      <param name="snmp-object"  value="$cempMemPoolFree.%mempool-index%"/>
+      <param name="rrd-ds"       value="Pool%mempool-poolindex%Free"/>
+      <param name="graph-legend" value="%mempool-name% memory free" />
+      <param name="comment"      value="Bytes Free in %mempool-name% pool"/>
+    </leaf>
+    <leaf name="Used">
+      <param name="snmp-object"  value="$cempMemPoolUsed.%mempool-index%"/>
+      <param name="rrd-ds"       value="Pool%mempool-poolindex%Used"/>
+      <param name="graph-legend" value="%mempool-name% memory free" />
+      <param name="comment"      value="Bytes Used in %mempool-name%"/>
+    </leaf>
+    <leaf name="LargestFree">
+      <param name="snmp-object"
+             value="$cempMemPoolLargestFree.%mempool-index%"/>
+      <param name="rrd-ds"       value="Pool%mempool-poolindex%LargestFree"/>
+      <param name="graph-legend" value="%mempool-name% largest free block" />
+      <param name="comment" value="Largest free block in %mempool-name% pool"/>
+    </leaf>
+  </template>
+
   <template name="cisco-mempool">
+    <param name="data-file"    value="%system-id%_memusage.rrd"/>
     <leaf name="Usage">
       <param name="precedence" value="1000"/>
       <param name="comment" value="Total vs. Used Memory"/>
