@@ -1,3 +1,8 @@
+2005-05-25  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* perllib/Torrus/DevDiscover/CiscoGeneric.pm: enchanced memory
+	pools stats (line cards and VIP memory)
+
 2005-05-23  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* templates/html-incblocks.txt:
